--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,7 +16,7 @@ openpyxl==3.1.5
 xlrd==2.0.1
 numpy==2.1.1
 
-psycopg2-binary==2.9.9
+psycopg[binary]==3.2.4
 httpx==0.27.0
 alembic==1.13.2 
 cachetools==5.3.3
